--- a/src/Stylesheets/style.css
+++ b/src/Stylesheets/style.css
@@ -10,16 +10,21 @@ body {
   font-size: 400%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+button{
+  background-color: aqua;
 }
 .row {
   width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  padding: .1%;
+  justify-content: space-around;
 }
 .question {
   width: 15%;
-  padding: 1%;
+  padding: 2%;
+}
+.category{
+  width: 12%;
+  text-align: center;
 }
