--- a/src/Stylesheets/style.css
+++ b/src/Stylesheets/style.css
@@ -14,6 +14,7 @@ body {
 }
 button {
   background-color: aqua;
+  text-transform: uppercase;
 }
 .row {
   width: 100%;
@@ -41,12 +42,13 @@ button {
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
-.question {
+#question {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   color: yellow;
   text-shadow: -1.25px -1.25px 0 blue, 1.25px -1.25px 0 blue,
     -1.25px 1.25px 0 blue, 1.25px 1.25px 0 blue;
   text-transform: uppercase;
+  text-align: center;
 }
 .category {
   width: 12%;
