--- a/src/Stylesheets/style.css
+++ b/src/Stylesheets/style.css
@@ -12,24 +12,30 @@ body {
   display: flex;
   flex-direction: column;
 }
-button {
-  background-color: aqua;
-  text-transform: uppercase;
-}
+
 .row {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
-.points {
+.points-question {
+  transition: 0.5s;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  text-shadow: -1.25px -1.25px 0 blue, 1.25px -1.25px 0 blue,
-    -1.25px 1.25px 0 blue, 1.25px 1.25px 0 blue;
+  text-shadow: -1.25px -1.25px 0 blue, 1.25px -1.25px 0 blue, -1.25px 1.25px 0 blue, 1.25px 1.25px 0 blue;
   color: yellow;
   width: 15%;
   padding: 1.5%;
+  background-color: aqua;
+  text-transform: uppercase;
 }
+
+.points-question:hover{
+  border-radius: 20%;
+  transform: translateY(-5px);
+  transition: 0.5s;
+}
+
 .category {
   color: white;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -56,5 +62,50 @@ button {
 }
 
 .choice {
+  margin: auto;
+  text-align: center;
+  width: 20%;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(79,121,9,1) 0%, rgba(0,212,255,1) 100%);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color:purple;
+  transition: 0.5s;
+}
+
+.choice:hover{
+  border-radius: 40%;
+  transform: translateY(-5px);
+}
+
+#c1 {
+  top: 5%;
+  position: relative;
+}
+#c2 {
+  top: 10%;
+  position: relative;
+}
+#c3 {
+  top: 15%;
+  position: relative;
+}
+#c4 {
+  top: 20%;
+  position: relative;
+}
+
+
+#correct{
+  padding-top: 1.5%;
+  color: lime;
+  margin: auto;
+  font-size: 1000%;
+}
+
+#wrong {
+  padding-top: 1.5%;
+  font-size: 1000%;
+  color: red;
+  margin: auto;
 }
